# ir_classification

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
classification/: datasets.py  helper.ipynb  vocab.py
datasets/: glove_default_vector.npy
datasets/systematic_review/: phase1.dev.shuf.tsv  phase1.test.shuf.tsv  phase1.train.shuf.tsv
ir_classification/: RCERESA1.txt  datasets.py  experiment.ipynb  helper.ipynb  models.py  train.py  vocab.py
ir_classification/configs/: base_config.yaml
