[tool.poetry]
name = "ir_classification"
version = "0.1.0"
description = ""
authors = ["Ryan Ceresani <example@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.1.3"
torchtext = "^0.11.0"
torch = "^1.10.0"
scikit-learn = "^1.0"
matplotlib = "^3.4.3"
tensorboard = "^2.7.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^4.0.1"
ipykernel = "^6.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
